@@ -1,2 +1,1 @@
 -Djava.awt.headless=true
---enable-preview
